--- a/park-homepage.html
+++ b/park-homepage.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="gridhomepage.css">
+<link rel="stylesheet" type="text/css" href="park-homepage-style.css">
 
 <html>
 <head>
