--- a/park-gallery.html
+++ b/park-gallery.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="park-gallery.css">
+<link rel="stylesheet" type="text/css" href="park-gallery-style.css">
 
 <html>
 <meta name="viewport" content="initial-scale=1, width=device-width">
